# abCTF

./: .env.dev  .gitignore  README.md  justfile  pyproject.toml
abctf/: __init__.py  chall.py  extensions.py  models.py  render.py  wsgi.py
abctf/routes/: __init__.py  auth.py  chall.py  main.py  team.py
abctf/static/css/: style.css  theme.css
abctf/templates/: _auth.html  _common.html  challenge.html  challenges.html  create_team.html  debug.html  index.html  join_team.html  list_teams.html  login.html  scoreboard.html  team_details.html
challs/: README.txt
challs/example/: README.md  chall.json  chall.py
